[package]
name = "hotpotato"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
openbrush = { version = "4.0.0-beta", default-features = false, features = ["psp34"] }

[dev-dependencies]
ink_e2e = "4.3.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []
